# easytranscriber

./: .gitignore  .nojekyll  CHANGELOG.md  LICENSE  README.md  about.html  benchmarks.html  index.html  pyproject.toml  search.db  search.db-shm  search.db-wal  search.json  styles.css
.github/workflows/: publish.yml
_assets/: hero-dark.html
benchmarks/: README.md  benchmarks.md  download_riksdagen.py  plot_bench.R  results.csv  transcribe_ct2_dataloader.py  transcribe_hf.py  transcribe_pipeline.py  transcribe_whisperx.py
docs/: _quarto.yml  about.qmd  benchmarks.qmd  index.qmd  objects.json  styles.css
docs/_assets/: hero-light.html
docs/_freeze/get-started/overview/execute-results/: html.json
docs/_freeze/get-started/text-processing/execute-results/: html.json
docs/get-started/: overview.qmd  pipelines.qmd  search.qmd  text-processing.qmd
docs/styles/: dark-custom.scss  light-custom.scss
get-started/: demo.js  overview.html  pipelines.html  search.html  text-processing.html
reference/: AlignmentSegment.html  AudioChunk.html  AudioMetadata.html  SpeechSegment.html  StreamingAudioFileDataset.html  StreamingAudioSliceDataset.html  WordSegment.html  _styles-quartodoc.css  asr.ct2.transcribe.html  asr.hf.transcribe.html  data.datamodel.AlignmentSegment.html  data.datamodel.AudioChunk.html  data.datamodel.AudioMetadata.html  data.datamodel.SpeechSegment.html  data.datamodel.WordSegment.html  data.streaming.StreamingAudioFileDataset.html  data.streaming.StreamingAudioSliceDataset.html  default_text_normalize.html  get_object.html  index.html  normalization.default_text_normalize.html  normalization.text_normalizer.html  pipelines.pipeline.html  preview.html  text.normalization.default_text_normalize.html  text_normalizer.html  utils.hf_to_ct2_converter.html
scripts/: download_ct2.py  transcribe_ct2.py  transcribe_ct2_dataloader.py  transcribe_hf.py  transcribe_vad.py  transcribe_whisperx.py
site_libs/bootstrap/: bootstrap-08f464c549ace2d06a19f70efc557179.min.css  bootstrap-5f53e196a2178d245accc371ac19f050.min.css  bootstrap-634778926a3498fa8d8d00942a64617e.min.css  bootstrap-65a88d0587c27e357f5f449b3e869586.min.css  bootstrap-65e694df801fadb16aa9e48d400e9636.min.css  bootstrap-8b604e4c6ae5304b6473fa4261614260.min.css  bootstrap-b701948f03a84fdd0e0325dee96d7fae.min.css  bootstrap-d6dd305842102f56811caaefe344bff1.min.css  bootstrap-dark-0bef022c5375217e1fe668418945a4c0.min.css  bootstrap-dark-2c063bcff4a00d368af61f2ed5b9e47f.min.css  bootstrap-dark-2fa454ea71eeecb6547644d03811e1b9.min.css  bootstrap-dark-376bda2010521c172d4759426a7776e8.min.css  bootstrap-dark-65a3b16f04f65ab4039ba7f8b4d4cdcc.min.css  bootstrap-dark-9ba7254411b574ae9777a917f44d17c1.min.css  bootstrap-dark-9e7770ad2ff9ee40a94d141b617c18c0.min.css  bootstrap-dark-d2be07560ea121de3029aecc67d70911.min.css  bootstrap-dark-f48754a524d249cbfee4b863d4b04778.min.css  bootstrap-f055453bf5c6f63e9b894934d5b0dc26.min.css
src/easytranscriber/: audio.py  pipelines.py  utils.py
src/easytranscriber/asr/: cohere.py  ct2.py  hf.py
src/easytranscriber/data/: __init__.py  collators.py  datamodel.py  dataset.py
src/easytranscriber/search/: __main__.py  app.py  db.py  indexer.py
src/easytranscriber/search/static/: style.css  transcript.js
src/easytranscriber/search/templates/: base.html  document.html  documents.html  search.html
src/easytranscriber/text/: normalization.py
src/easywhisper/: pipelines.py
src/easywhisper/asr/: ct2.py  hf.py
src/easywhisper/data/: __init__.py  datamodel.py  streaming.py
src/easywhisper/text/: normalization.py
tests/: test_audio.py  test_utils.py
